--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
-  "default": "index.html",
+  "default": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist",
+    "start": "parcel index.js",
+    "build": "parcel build index.js --dist-dir ./dist",
     "---------------------------------------------------------------------------": "",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
@@ -22,11 +22,17 @@
     "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "autoprefixer": "^7.1.4",
+    "buffer": "^6.0.3",
     "concat": "^1.0.3",
+    "events": "^3.3.0",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.0-rc.0",
-    "postcss-cli": "^4.1.1"
+    "postcss-cli": "^4.1.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "dependencies": {
     "core-js": "^3.20.3",
