--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "default": "index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "parcel index.js",
+    "startOld": "parcel index.js",
     "build": "parcel build index.js --dist-dir ./dist",
     "---------------------------------------------------------------------------": "",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
@@ -14,7 +15,8 @@
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
+    "start": "nodemon index.js"
   },
   "author": "Venci",
   "license": "ISC",
@@ -26,6 +28,7 @@
     "concat": "^1.0.3",
     "events": "^3.3.0",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.0-rc.0",
     "postcss-cli": "^4.1.1",
@@ -36,9 +39,9 @@
   },
   "dependencies": {
     "core-js": "^3.20.3",
-    "leaflet": "^1.7.1",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.5",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "slugify": "^1.6.5"
   }
 }
