--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "nodefarm",
   "version": "1.0.0",
   "description": "",
-  "default": "index.js",
-  "main": "index.js",
+  "default": "template-overview.html",
   "scripts": {
-    "startOld": "parcel index.js",
-    "build": "parcel build index.js --dist-dir ./dist",
+    "startOld": "parcel ./*.html",
+    "build": "parcel build ./*.html --dist-dir ./dist",
     "---------------------------------------------------------------------------": "",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
