--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "default": "templates/template-card.html templates/template-overview.html templates/template-product.html index.js modules/replaceTemplate.js dev-data/data.json",
   "scripts": {
     "startOld": "parcel templates/template-card.html templates/template-overview.html templates/template-product.html index.js modules/replaceTemplate.js dev-data/data.json",
-    "build": "parcel build template-card.html template-overview.html template-product.html index.js modules/replaceTemplate.js dev-data/data.json--dist-dir ./dist",
+    "build": "parcel build templates/template-card.html templates/template-overview.html templates/template-product.html index.js modules/replaceTemplate.js dev-data/data.json --dist-dir ./dist",
     "---------------------------------------------------------------------------": "",
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
